--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ The pulse sensors to measures the driver's heart rate. A gyroscope senses if the
               </li>
               <li class="mb-3">
                 <strong class="d-block mb-1">United Kingdom</strong>
-                <span>Alexander Koubba</span>
+                <span>Alexander Koubaa</span>
               </li>
               <li class="mb-3">
                 <strong class="d-block mb-1">Russia</strong>
